<resources>
    <string name="app_name">PinCodePage</string>
    <string name="btn_1_text">1</string>
    <string name="btn_2_text">2</string>
    <string name="btn_3_text">3</string>
    <string name="btn_4_text">4</string>
    <string name="btn_5_text">5</string>
    <string name="btn_6_text">6</string>
    <string name="btn_7_text">7</string>
    <string name="btn_8_text">8</string>
    <string name="btn_9_text">9</string>
    <string name="btn_0_text">0</string>
    <string name="btn_delete_text"><![CDATA[<]]></string>
    <string name="btn_ok_text">OK</string>
    <string name="hint_text">Введите код</string>
    <string name="success_toast">Код верен</string>
    <string name="account_page_title">Личная страница</string>
    <string name="btn_camera">Запустить камеру</string>
    <string name="btn_call">Позвонить</string>
    <string name="btn_mail">Отправить по почте</string>
    <string name="btn_share">Поделиться</string>
    <string name="account_name">Azat Serzhanov</string>
    <string name="account_mail">azatserzhan@gmail.com</string>
    <string name="account_avatar_alt_text">account avatar</string>
</resources>